--- a/package.json
+++ b/package.json
@@ -6,25 +6,25 @@
   "scripts": {
     "test": "jest",
     "dev": "nodemon ./src/server.js",
-    "start": "node server.js"
+    "start": "node ./src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
     "axios": "^0.21.1",
-    "nodemon": "^2.0.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "express-validator": "^6.12.0",
     "heroku": "^7.47.12",
     "json-easy-filter": "^0.3.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.14",
+    "mongoose": "^5.13.1",
     "monk": "^7.3.3",
+    "nodemon": "^2.0.7",
     "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
