--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemon": "^2.0.7",
     "pdf-lib": "^1.16.0",
     "pdfkit": "^0.12.1",
+    "png-js": "^1.0.0",
     "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
