--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.0",
@@ -29,6 +30,7 @@
     "pdf-lib": "^1.16.0",
     "pdfkit": "^0.12.1",
     "png-js": "^1.0.0",
+    "sharp": "^0.28.3",
     "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
